--- a/assets/css/jungle.scss
+++ b/assets/css/jungle.scss
@@ -1,5 +1,6 @@
 .jungle{
   margin-bottom: 180px;
+
   @media (max-width: 992px) {
     margin-bottom: 220px;
   }
@@ -93,6 +94,37 @@
 .farm-tabs{
   .nav-link h2{
     line-height: 1.4;
+  }
+}
+
+.farming-bg{
+  background: 0;
+  width: 100%;
+  min-height: 800px;
+  border: 2px solid rgba(206, 212, 218, 0.2);
+  border-top: 0;
+
+  .table{
+    background-color: rgba(54, 64, 74, 0.8);
+  }
+
+  .farming-history{
+    max-height: 500px;
+    overflow: auto;
+  }
+
+  .card-box {
+    background-color: rgba(54, 64, 74, 0.8);
+  }
+}
+
+.mining-bg{
+  input[type='range']::-webkit-slider-thumb {
+    width: 16px;
+    -webkit-appearance: none;
+    height: 16px;
+    background: #f7b84b;
+    border-radius: 10px;
   }
 }
 
