--- a/lib/moba_web/templates/about/index.html.leex
+++ b/lib/moba_web/templates/about/index.html.leex
@@ -4,7 +4,7 @@
             <i class="fa fa-users text-primary"></i>
             <h3>About Us</h3>
             <p class="text-muted">
-              Get to know more about the BrowserMOBA project and its future.
+              Get to know a bit more about the BrowserMOBA project.
             </p>
         </div>
     </div>
@@ -19,12 +19,6 @@
                     <a href="#faq-tab" data-toggle="tab" aria-expanded="false" class="nav-link px-3 py-2 active">
                         <span class="d-inline-block d-sm-none"><i class="fa fa-question-circle mr-1"></i>Info</span>
                         <span class="d-none d-sm-inline-block"><i class="fa fa-question-circle mr-1"></i> About the Game</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#features-tab" data-toggle="tab" aria-expanded="true" class="nav-link px-3 py-2">
-                        <span class="d-inline-block d-sm-none"><i class="fa fa-star mr-1"></i>Future</span>
-                        <span class="d-none d-sm-inline-block"><i class="fa fa-star mr-1"></i> Upcoming Features</span>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -58,7 +52,7 @@
                                 <div>
                                     <div class="faq-question-q-box">Q.</div>
                                     <h4 class="faq-question">What is the state of the game? Is it finished?</h4>
-                                    <p class="faq-answer mb-4">The game has been under heavy development since the beginning of 2019 and is currently under Beta testing for a planned release by the end of 2021, but development will continue well after that, we're all in this for the long haul!</p>
+                                    <p class="faq-answer mb-4">The game has been under heavy development since the beginning of 2019 and is currently under Beta testing for a planned release by the end of 2022, but development will continue well after that, we're all in this for the long haul!</p>
                                 </div>
 
                                 <div>
@@ -66,57 +60,6 @@
                                     <h4 class="faq-question">Do you own all of the content in the game?</h4>
                                     <p class="faq-answer mb-4">Definitely not. We take most of our inspiration from <a href="https://www.dota2.com/" target="_blank">Dota 2</a>, a game we have played since its early Warcraft days in 2006. Dota was the root of all MOBAs and we love their hero and item concepts, so we've ported them to a turn-based model here. If Valve has any problems with their content being used in BrowserMOBA, please reach out to us.</p>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="tab-pane fade" id="features-tab">
-                    <div class="row pt-2">
-                        <div class="col-lg-6">
-                            <div class="p-lg-2">
-                                <div>
-                                    <div class="faq-question-q-box"><i class="fa fa-globe"></i></div>
-                                    <h4 class="faq-question">Seasons</h4>
-                                    <p class="faq-answer mb-4">Like many modern RPGs, BrowserMOBA will be played in Seasons, with each new season being a complete ranking reset along with tons of new content like heroes, items, skills, skins and balance changes. The first season will start with the launch of the game in the end of 2021, stay tuned!</p>
-                                </div>
-
-                                <div>
-                                    <div class="faq-question-q-box"><i class="fa fa-crosshairs"></i></div>
-                                    <h4 class="faq-question" data-wow-delay=".1s">Arena Teams</h4>
-                                    <p class="faq-answer mb-4">Instead of playing the Arena with a single hero, you will enter with a team of 3 heroes that you will be able to switch between at any time during the match. This will add another layer of competitiveness, allowing more strategies of attacking and defending your rank.</p>
-                                </div>
-
-                                <div>
-                                    <div class="faq-question-q-box"><i class="fa fa-user-friends"></i></div>
-                                    <h4 class="faq-question">Cooperative Bosses</h4>
-                                    <p class="faq-answer mb-4">Roshan was just the beginning. Players will be able to band together to challenge much harder bosses in order to win special rewards and recognition among an exclusive Cooperative Team Ranking.</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-6">
-                            <div class="p-lg-2">
-                              <h5 class="text-center text-warning" style="margin-top:-2rem"><i class="fa fa-trophy"></i> Tournaments</h5>
-                              <!-- Question/Answer -->
-                                <div>
-                                    <div class="faq-question-q-box"><i class="fa fa-stopwatch"></i></div>
-                                    <h4 class="faq-question">Real-time Battles</h4>
-                                    <p class="faq-answer mb-4">Competition is the ultimate goal of BrowserMOBA, and in order to make the game truly competitive we will be rolling out tournaments with special formats where battles will be in real-time, with you being in control of the action when both attacking and defending.</p>
-                                </div>
-
-                                <div>
-                                    <div class="faq-question-q-box"><i class="fa fa-users"></i></div>
-                                    <h4 class="faq-question">Team Battles</h4>
-                                    <p class="faq-answer mb-4">Tournaments will follow a special format of 5v5, where each player will use their heroes consecutively in a single battle against the opponent's team until one player loses all of their heroes, and thus, the battle. The true champion will be the one with the best team and the best strategy of picking the right heroes at the proper time.</p>
-                                </div>
-
-                                <div>
-                                    <div class="faq-question-q-box"><i class="fa fa-eye"></i></div>
-                                    <h4 class="faq-question">Spectator Mode</h4>
-                                    <p class="faq-answer mb-4">Players and fans will be able to watch all tournament battles in real-time turn by turn to root for their favorites and study their opponents' strategies.</p>
-                                </div>
-
-
                             </div>
                         </div>
                     </div>
