--- a/lib/moba_web/templates/dashboard/index.html.leex
+++ b/lib/moba_web/templates/dashboard/index.html.leex
@@ -14,7 +14,7 @@
             <%= render "_hero_list.html", assigns %>
         </div>
         <div class="col-xl-6">
-            <%= render "_pvp.html", assigns %>
+            <%= render "_pvp_progression.html", assigns %>
         </div>
     </div>
 </div>
