--- a/lib/moba_web/templates/tavern/index.html.leex
+++ b/lib/moba_web/templates/tavern/index.html.leex
@@ -6,7 +6,7 @@
                 <i class="fa fa-store-alt text-primary"></i>
                 <h1>Tavern</h1>
                 <p class="text-muted">
-                    Unlock new heroes, skills and skins to play with by using your Shards. You can acquire Shards by finishing heroes in the Jungle or winning top 3 of the Arena.
+                    Unlock new heroes, skills and skins to play with by using your Shards. You can acquire Shards by finishing Quests.
                 </p>
             </div>
         </div>
