--- a/lib/moba_web/templates/arena/select.html.leex
+++ b/lib/moba_web/templates/arena/select.html.leex
@@ -1,4 +1,4 @@
-<div class="arena-select" phx-hook="SetMainWrapper" id="arena-select">
+<div class="arena-select" id="arena-select">
 
     <div class="row">
         <div class="col-12 text-center">
