--- a/lib/moba_web/templates/hero/_quests.html.leex
+++ b/lib/moba_web/templates/hero/_quests.html.leex
@@ -70,4 +70,4 @@
     </div>
 </div>
 
-<%= MobaWeb.DashboardView.render "_pve_tier_rewards.html", Map.put(assigns, :pve_tier, @current_user.pve_tier) %>
+<%= MobaWeb.DashboardView.render "_pve_tier_rewards.html", Map.merge(assigns, %{pve_tier: @current_user.pve_tier, current_season_progression: @completed_season_progression}) %>
