Initial draft of arena matches

--- a/lib/moba_web/templates/community/index.html.heex
+++ b/lib/moba_web/templates/community/index.html.heex
@@ -44,7 +44,7 @@
                                     <img src={"/images/pvp/#{message.tier}.png"}/>
                                 </div>
                                 <p class="inbox-item-author">
-                                    <%= live_redirect message.author, to: Routes.live_path(@socket, MobaWeb.UserLive, message.user_id), class: if(message.is_admin, do: "text-danger", else: "text-dark") %>
+                                    <%= live_redirect message.author, to: Routes.live_path(@socket, MobaWeb.PlayerLive, message.user_id), class: if(message.is_admin, do: "text-danger", else: "text-dark") %>
                                     <%= if message.is_admin do %>
                                         <small class="text-danger">(admin)</small>
                                     <% end %>
