--- a/lib/moba_web/templates/duel/show.html.heex
+++ b/lib/moba_web/templates/duel/show.html.heex
@@ -83,7 +83,7 @@
                                     <img src={"/images/pvp/#{message.tier}.png"}/>
                                 </div>
                                 <p class="inbox-item-text">
-                                    <%= live_redirect message.author, to: Routes.live_path(@socket, MobaWeb.UserLive, message.user_id), class: "text-dark mr-1" %>
+                                    <%= live_redirect message.author, to: Routes.live_path(@socket, MobaWeb.PlayerLive, message.user_id), class: "text-dark mr-1" %>
                                      <%= message.body %>
                                 </p>
                                 <p class="inbox-item-date">
