--- a/lib/moba_web/templates/duel/_battle_review.html.leex
+++ b/lib/moba_web/templates/duel/_battle_review.html.leex
@@ -1,4 +1,4 @@
-<% turn = Engine.last_turn(@battle) %>
+<% turn = List.last(@battle.turns) %>
 
 <%= if @battle.finished do %>
     <div class="row mb-2">
@@ -17,13 +17,13 @@
         <div class="card-body p-3">
             <div class="row">
                 <div class="col center pr-4">
-                    <%= render "_turn_hero.html", battle: @battle, turn: Engine.last_turn(@battle), hero: @battle.attacker, turn_hero: if turn.attacker.hero_id == @battle.attacker_id, do: turn.attacker, else: turn.defender %>
+                    <%= render "_turn_hero.html", battle: @battle, turn: turn, hero: @battle.attacker, turn_hero: if turn.attacker.hero_id == @battle.attacker_id, do: turn.attacker, else: turn.defender %>
                 </div>
             </div>
             <hr class="mt-2 mb-1" />
             <div class="row">
                 <div class="col center pr-4">
-                    <%= render "_turn_hero.html", battle: @battle, turn: Engine.last_turn(@battle), hero: @battle.defender, turn_hero: if turn.attacker.hero_id == @battle.attacker_id, do: turn.defender, else: turn.attacker %>
+                    <%= render "_turn_hero.html", battle: @battle, turn: turn, hero: @battle.defender, turn_hero: if turn.attacker.hero_id == @battle.attacker_id, do: turn.defender, else: turn.attacker %>
                 </div>
             </div>
         </div>
