--- a/lib/moba_web/templates/match/_battle_review.html.heex
+++ b/lib/moba_web/templates/match/_battle_review.html.heex
@@ -1,24 +1,17 @@
-<% turn = Engine.last_turn(@battle) %>
+<% last_turn = List.last(@battle.turns) %>
 
 <div class="card">
-    <div class="card-header p-1">
-        <h3 class="text-center">
-        	<%= live_redirect to: Routes.live_path(@socket, MobaWeb.BattleLive, @battle), class: "text-white" do %>
-	            <%= MobaWeb.BattleView.battle_result(@battle) %>
-	        <% end %>
-        </h3>
-    </div>
-    <div class="card-body p-3">
-        <div class="row">
-            <div class="col center pr-4">
-                <%= render "_turn_hero.html", battle: @battle, turn: Engine.last_turn(@battle), hero: @battle.attacker, turn_hero: if turn.attacker.hero_id == @battle.attacker_id, do: turn.attacker, else: turn.defender %>
-            </div>
-        </div>
-        <hr class="mt-2 mb-1" />
-        <div class="row">
-            <div class="col center pr-4">
-                <%= render "_turn_hero.html", battle: @battle, turn: Engine.last_turn(@battle), hero: @battle.defender, turn_hero: if turn.attacker.hero_id == @battle.attacker_id, do: turn.defender, else: turn.attacker %>
-            </div>
-        </div>
+    <div class="card-body p-1">
+    	<%= live_redirect to: Routes.live_path(@socket, MobaWeb.BattleLive, @battle) do %>		        
+	    	<div class="row">
+	            <div class="col center pr-4">
+	                <%= render "_turn_hero.html", battle: @battle, turn: last_turn, hero: player_pick(@battle, @match) %>
+	            </div>
+		        <hr class="mt-2 mb-1" />
+	            <div class="col center pr-4">
+	                <%= render "_turn_hero.html", battle: @battle, turn: last_turn, hero: opponent_pick(@battle, @match) %>
+	            </div>
+		    </div>
+	    <% end %>
     </div>
 </div>
