--- a/lib/moba_web/templates/match/_picked_hero.html.heex
+++ b/lib/moba_web/templates/match/_picked_hero.html.heex
@@ -1,4 +1,4 @@
-<div class="col-lg-4 col-md-6" id={"visible-hero-#{@hero.id}"}>
+<div class="col-md-12" id={"visible-hero-#{@hero.id}"}>
     <div class="card hero-card mb-0" style={"background-image: url(#{GH.background_url(@hero)})"}>
         <div class="card-header pt-0 pb-1">
             <h4 class="text-white d-flex justify-content-between align-items-center mb-0">
