--- a/lib/moba_web/templates/match/_turn_hero.html.heex
+++ b/lib/moba_web/templates/match/_turn_hero.html.heex
@@ -1,13 +1,10 @@
 <% turn_hero = if @turn.attacker.hero_id == @hero.id, do: @turn.attacker, else: @turn.defender %>
 <div class="row mt-1">
-    <div class="col">
+    <div class="col-4">
         <img src={GH.image_url(@hero.avatar)} class="avatar"/>
-        <h4><%= @hero.name %></h4>
     </div>
-</div>
-<div class="row">
     <div class="col">
-        <div class="row mb-1">
+        <div class="row mt-1 mb-1">
             <div class="col">
                 <div class="progress progress-fixed">
                     <%= if turn_hero.current_hp > 0 do %>
@@ -37,6 +34,5 @@
                 </div>
             </div>
         </div>
-
     </div>
 </div>
