--- a/lib/moba_web/templates/match/show.html.heex
+++ b/lib/moba_web/templates/match/show.html.heex
@@ -1,42 +1,46 @@
-<div class="row">
-	<div class="col-4">
-		<div class="card">
-			<h1 class="text-center"><%= username(@match.player) %></h1>
-			<div class="row no-gutters">
+<div class="matches">
+	<div class="row mt-2">
+		<div class="col-4">
+			<div class="card mb-0">
+				<h2 class="text-center f-rpg"><%= username(@match.player) %></h2>
+			</div>
+			<div class="row mt-2">
 				<%= for hero <- @match.player_picks do %>
 					<%= render "_picked_hero.html", hero: hero %>
 				<% end %>
 			</div>
 		</div>
-	</div>
-	<div class="col-4">
-		<div class="row">
-			<div class="col">
-				<div class="card">
-					<%= if @match.winner && @tick >= length(@battles) do %>
-						<h2 class="text-center">
-							Winner: <%= username(@match.winner) %>
-							<button class="btn btn-danger btn-sm" phx-click="reset">Reset</button>
-						</h2>
-					<% end %>
-					<%= if @tick == 0 do %>
-						<button class="btn btn-danger btn-block btn-lg" phx-click="start">Start</button>
-					<% end %>
+		<div class="col-4">
+			<div class="row">
+				<div class="col">
+					<div class="card mb-0">
+						<%= if @match.phase do %>
+							<h2 class="text-center">
+								Winner:
+								<%= if @match.winner && @tick >= length(@battles) do %> 
+									<%= username(@match.winner) %>
+									<button class="btn btn-danger btn-sm" phx-click="reset">Reset</button>
+								<% else %>
+									?
+								<% end %>
+							</h2>
+						<% else %>
+							<button class="btn btn-danger btn-block btn-lg" phx-click="start">Start</button>
+						<% end %>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col">
+			<div class="row mt-1">
 				<%= for {battle, index} <- Enum.with_index(@battles, 1) |> Enum.take(@tick) do %>
 					<%= render "_battle_review.html", battle: battle, index: index, socket: @socket, match: @match %>
 				<% end %>
 			</div>
 		</div>
-	</div>
-	<div class="col-4">
-		<div class="card">
-			<h1 class="text-center"><%= username(@match.opponent) %></h1>
-			<div class="row no-gutters">
+		<div class="col-4">
+			<div class="card mb-0">
+				<h2 class="text-center f-rpg"><%= username(@match.opponent) %></h2>
+			</div>
+			<div class="row mt-2">
 				<%= for hero <- @match.opponent_picks do %>
 					<%= render "_picked_hero.html", hero: hero %>
 				<% end %>
